--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
         processIsolation="false"
 		stopOnFailure="false">
 	<testsuites>
-		<testsuite name="PSR-3 Test Suite">
+		<testsuite name="Test Suite">
 			<directory suffix=".php">./tests</directory>
 		</testsuite>
 	</testsuites>
